--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ input {
 }
 
 .dust-class label {
-  display: inline-block;
+  display: none;
   position: absolute;
   top: 24px;
   left: 25px;
@@ -92,6 +92,7 @@ input {
   color: #888;
   font-weight: bold;
 }
+
 .A {
   display: inline-block;
   position: absolute;
@@ -107,20 +108,66 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .loginPage .logo {
   display: inline-flex;
 }
 
-.loginPage .loginInput{
+.loginPage .loginInput {
   display: flex;
   align-items: flex-end;
 }
 
-.loginPage form{
+.loginPage form {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.checkCircle {
+  color: green;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 25px;
+  left: 450px;
+}
+
+/* 모달창스타일--------------------------------------------- */
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+}
+
+.modalBody {
+  position: flex;
+  width: 300px;
+  height: 500px;
+  padding:40px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.918);
+  border-radius: 10px;
+}
+
+.modalClose {
+  position: absolute;
+  right: 10px;
+  left: 10px;
+}
+
+.boxbox{
+  height: 1000px;
 }
