--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,7 @@ input {
   width: 30px;
   height: 30px;
   top: 25px;
-  left: 450px;
+  right: -30px;
 }
 
 /* 모달창스타일--------------------------------------------- */
@@ -170,4 +170,17 @@ input {
 
 .boxbox{
   height: 1000px;
+}
+
+.checkboxImg{
+  width:20px;
+}
+
+.TodoListCheckBox ul{
+  list-style-type: none;
+}
+
+.TodoListCheckBox ul li input{
+  width:20%;
+  border-bottom : 1px solid black;
 }
